--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -43,7 +43,7 @@
 		}
 		$.extend(true, $.fn.dataTable.defaults, {
 			stateSave: true,
-			// Attention au formattage, respecter l'espace entre les crochets pour qu'il ne soit pas
+			// Attention au formattage, respecter l'espace entre les crochets pour qu'ils ne soient pas
 			//  traités par Thymeleaf
 			lengthMenu: [ [10, 25, 50, 100, -1], [10, 25, 50, 100, tout] ],
 			pageLength: parseInt(datatPageLength),
