--- a/src/main/resources/templates/essaim/essaimCadreLotForm.html
+++ b/src/main/resources/templates/essaim/essaimCadreLotForm.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsdatetimepicker}"></script>
-	<link th:replace="~{include :: cssdatetimepicker}" />
-	<script th:replace="~{include :: localejsdatetimepicker}"></script>
-	<script>
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsdatetimepicker}"></script>
+<link th:replace="~{include :: cssdatetimepicker}" />
+<script th:replace="~{include :: localejsdatetimepicker}"></script>
+<script>
 		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('valeur').focus();
 			$('#evenementForm').validate({
@@ -29,7 +29,6 @@
 		});
 	</script>
 </head>
-
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
@@ -42,18 +41,22 @@
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}" method="post" id="evenementForm">
-		<input type="hidden" id="typeEvenement" name="typeEvenement" value="RUCHECADRE" />
+	<form action="#"
+		th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}" method="post"
+		id="evenementForm">
+		<input type="hidden" id="typeEvenement" name="typeEvenement"
+			value="RUCHECADRE" />
 		<div th:replace="~{includeForm :: date}"></div>
 		<div class="form-floating mb-3">
-			<input placeholder="" class="form-control" type="text" id="valeur" name="valeur" /> <label
-				class="form-label" th:text="#{nbCadres}" for="valeur"></label>
+			<input placeholder="" class="form-control" type="text" id="valeur"
+				name="valeur" /> <label class="form-label" th:text="#{nbCadres}"
+				for="valeur"></label>
 		</div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
-		<small id="textHelp" class="form-text text-muted" th:text="#{evenruchercadreaide}"></small><br />
+		<small id="textHelp" class="form-text text-muted"
+			th:text="#{evenruchercadreaide}"></small><br />
 		<div th:replace="~{includeForm :: BtnForm}"></div>
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
-
 </html>
