--- a/src/main/resources/templates/recolte/recolteStat.html
+++ b/src/main/resources/templates/recolte/recolteStat.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsruches}"></script>
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsruches}"></script>
 </head>
 
 <body th:with="rs=(${#lists.size(ruchers)} > 1)">
@@ -17,8 +18,8 @@
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{#{urldoc}+'13359_3141829358'}" class="bi-book" th:title="#{Doc}" target="_blank"
-					aria-hidden="true"></a>
+				<a th:href="@{#{urldoc}+'13359_3141829358'}" class="bi-book"
+					th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
 			</div>
 
 		</div>
@@ -39,21 +40,25 @@
 			</thead>
 			<tbody>
 				<tr th:each="idNom, i : ${ruchers}">
-					<td>
-						<a th:href="@{'/rucher/'+${idNom.id}}" th:text="${idNom.nom}"></a>
-					</td>
-					<td class="num" th:text="${#numbers.formatDecimal(poidsRec[i.index],1,2)}"></td>
-					<td th:if="${rs}" class="num" th:text="${#numbers.formatDecimal(partRec[i.index],1,2)}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(avgRec[i.index],1,2)}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(stdRec[i.index],1,2)}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(minRec[i.index],1,2)}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(maxRec[i.index],1,2)}"></td>
+					<td><a th:href="@{'/rucher/'+${idNom.id}}"
+						th:text="${idNom.nom}"></a></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(poidsRec[i.index],1,2)}"></td>
+					<td th:if="${rs}" class="num"
+						th:text="${#numbers.formatDecimal(partRec[i.index],1,2)}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(avgRec[i.index],1,2)}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(stdRec[i.index],1,2)}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(minRec[i.index],1,2)}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(maxRec[i.index],1,2)}"></td>
 					<td class="num" th:text="${countEssaimsRec[i.index]}"></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
-
 	<div class="container-fluid table-responsive">
 		<table class="table table-sm table-bordered" id="essaims">
 			<thead>
@@ -70,13 +75,13 @@
 			</thead>
 			<tbody>
 				<tr th:each="idNom, i : ${essaims}">
-					<td>
-						<a th:href="@{'/essaim/'+${idNom.id}}" th:text="${idNom.nom}"></a>
-					</td>
+					<td><a th:href="@{'/essaim/'+${idNom.id}}"
+						th:text="${idNom.nom}"></a></td>
 					<td th:text="${ruchersX[i.index].nom}"></td>
 					<td th:text="${poidsEss[i.index]}"></td>
 					<td th:text="${#numbers.formatDecimal(partRecEss[i.index],1,2)}"></td>
-					<td th:if="${rs}" th:text="${#numbers.formatDecimal(partRucherEss[i.index],1,2)}"></td>
+					<td th:if="${rs}"
+						th:text="${#numbers.formatDecimal(partRucherEss[i.index],1,2)}"></td>
 					<td th:text="${countRec[i.index]}"></td>
 					<td th:text="${#numbers.formatDecimal(ecartEss[i.index],1,2)}"></td>
 					<td th:text="${#numbers.formatDecimal(noteEss[i.index],1,2)}"></td>
@@ -84,8 +89,6 @@
 			</tbody>
 		</table>
 	</div>
-
-
 	<footer th:replace="~{include::footer}"></footer>
 </body>
 
